--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
-<p>
-  <a routerLink = '/employe'>employee Dashboard</a>
-</p>
-<p>
-  <a routerLink = '/admin'>Admin Dashboard</a>
-</p>
+<div class="container-fluid mt-3">
+  <h4>
+    <a class="mb-4 text-decoration-none" routerLink='/employe'>Employee Dashboard</a>
+  </h4>
+  <h4>
+    <a class="mb-4 text-decoration-none" routerLink='/admin'>Admin Dashboard</a>
+  </h4>
+</div>
 <router-outlet />
